Updating the virtual environment

--- a/APIs.ipynb
+++ b/APIs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     "querystring = {\"location\":\"Louisville, KY\",\"status_type\":\"ForSale\",\"sort\":\"status_type = ForSale\"}\n",
     "\n",
     "headers = {\n",
-    "\t\"X-RapidAPI-Key\": os.environ.get('RAPIDAPI_KEY'),\n",
+    "\t\"X-RapidAPI-Key\": os.getenv('RAPIDAPI_KEY'),\n",
     "    \"X-RapidAPI-Host\": \"zillow-com1.p.rapidapi.com\"\n",
     "}\n",
     "\n",
