Setting up the environment variables
For the Zillow API

--- a/APIs.ipynb
+++ b/APIs.ipynb
@@ -39,7 +39,7 @@
     "querystring = {\"location\":\"Louisville, KY\",\"status_type\":\"ForSale\",\"sort\":\"status_type = ForSale\"}\n",
     "\n",
     "headers = {\n",
-    "\t\"X-RapidAPI-Key\": os.getenv('RAPIDAPI_KEY'),\n",
+    "\t\"X-RapidAPI-Key\": os.environ.get('RAPIDAPI_KEY'),\n",
     "    \"X-RapidAPI-Host\": \"zillow-com1.p.rapidapi.com\"\n",
     "}\n",
     "\n",
@@ -50,10 +50,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENV environment variable does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "try:\n",
+    "    env_var = os.environ['RAPIDAPI_KEY']\n",
+    "    print('ENV environment variable exists')\n",
+    "except KeyError:\n",
+    "    print('ENV environment variable does not exist')"
+   ]
   }
  ],
  "metadata": {
