--- a/APIs.ipynb
+++ b/APIs.ipynb
@@ -10,16 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +29,7 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "import requests\n",
     "import os\n",
     "\n",
@@ -38,8 +37,10 @@
     "\n",
     "querystring = {\"location\":\"Louisville, KY\",\"status_type\":\"ForSale\",\"sort\":\"status_type = ForSale\"}\n",
     "\n",
+    "API_Key = os.getenv(\"RAPIDAPI_KEY\")\n",
+    "\n",
     "headers = {\n",
-    "\t\"X-RapidAPI-Key\": os.environ.get('RAPIDAPI_KEY'),\n",
+    "\t\"X-RapidAPI-Key\": os.getenv(\"RAPIDAPI_KEY\"),\n",
     "    \"X-RapidAPI-Host\": \"zillow-com1.p.rapidapi.com\"\n",
     "}\n",
     "\n",
@@ -50,22 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENV environment variable does not exist\n"
+      "env_var\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "try:\n",
-    "    env_var = os.environ['RAPIDAPI_KEY']\n",
-    "    print('ENV environment variable exists')\n",
+    "    env_var = os.getenv(\"RAPIDAPI_KEY\")\n",
+    "    print('ENV environment variable exists')#environ['RAPIDAPI_KEY']\n",
     "except KeyError:\n",
     "    print('ENV environment variable does not exist')"
    ]
