Updates to the file

--- a/APIs.ipynb
+++ b/APIs.ipynb
@@ -10,65 +10,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'message': 'Invalid API key. Go to https://docs.rapidapi.com/docs/keys for more info.'}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Employee_Name</th>\n",
+       "      <th>jobTitle</th>\n",
+       "      <th>Annual_Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Martin, Kyle D</td>\n",
+       "      <td>Fire Battalion Chief 56hr</td>\n",
+       "      <td>104089.85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Summers, William E</td>\n",
+       "      <td>Board Member</td>\n",
+       "      <td>3939.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Gibson, Osburne B</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>146946.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Addison, Joseph Lee</td>\n",
+       "      <td>Library Assistant LU</td>\n",
+       "      <td>45427.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Martin, David</td>\n",
+       "      <td>Library Page LU</td>\n",
+       "      <td>29577.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40825</th>\n",
+       "      <td>Brooks, Troya</td>\n",
+       "      <td>Youth Program Worker U310</td>\n",
+       "      <td>33966.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40826</th>\n",
+       "      <td>McKee, Joshua</td>\n",
+       "      <td>Workforce Solutions Manager</td>\n",
+       "      <td>63000.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40827</th>\n",
+       "      <td>Sands, Shelton</td>\n",
+       "      <td>Sanitation Tipper</td>\n",
+       "      <td>35339.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40828</th>\n",
+       "      <td>Ware, Meghan</td>\n",
+       "      <td>Victim Advocate</td>\n",
+       "      <td>34008.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40829</th>\n",
+       "      <td>Carter, Ni'Kimbra</td>\n",
+       "      <td>Housing Program Specialist</td>\n",
+       "      <td>33862.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>40830 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Employee_Name                     jobTitle  Annual_Rate\n",
+       "0           Martin, Kyle D    Fire Battalion Chief 56hr    104089.85\n",
+       "1       Summers, William E                 Board Member      3939.00\n",
+       "2        Gibson, Osburne B                     Director    146946.80\n",
+       "3      Addison, Joseph Lee         Library Assistant LU     45427.20\n",
+       "4            Martin, David              Library Page LU     29577.60\n",
+       "...                    ...                          ...          ...\n",
+       "40825        Brooks, Troya    Youth Program Worker U310     33966.40\n",
+       "40826        McKee, Joshua  Workforce Solutions Manager     63000.60\n",
+       "40827       Sands, Shelton            Sanitation Tipper     35339.20\n",
+       "40828         Ware, Meghan              Victim Advocate     34008.00\n",
+       "40829    Carter, Ni'Kimbra   Housing Program Specialist     33862.40\n",
+       "\n",
+       "[40830 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import requests\n",
-    "import os\n",
     "\n",
-    "url = \"https://zillow-com1.p.rapidapi.com/propertyExtendedSearch\"\n",
-    "\n",
-    "querystring = {\"location\":\"Louisville, KY\",\"status_type\":\"ForSale\",\"sort\":\"status_type = ForSale\"}\n",
-    "\n",
-    "API_Key = os.getenv(\"RAPIDAPI_KEY\")\n",
-    "\n",
-    "headers = {\n",
-    "\t\"X-RapidAPI-Key\": os.getenv(\"RAPIDAPI_KEY\"),\n",
-    "    \"X-RapidAPI-Host\": \"zillow-com1.p.rapidapi.com\"\n",
-    "}\n",
-    "\n",
-    "response = requests.get(url, headers=headers, params=querystring)\n",
-    "\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env_var\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "try:\n",
-    "    env_var = os.getenv(\"RAPIDAPI_KEY\")\n",
-    "    print('ENV environment variable exists')#environ['RAPIDAPI_KEY']\n",
-    "except KeyError:\n",
-    "    print('ENV environment variable does not exist')"
+    "pd.read_csv('Louisville_Metro_KY_-_Employee_Salary_Data.csv', usecols=[1,3,4], )"
    ]
   }
  ],
